--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
+
+Skip to content
+Pull requests
+Issues
+Marketplace
+Explore
+@palmerozo
+Your account has been flagged.
+Because of that, your profile is hidden from the public. If you believe this is a mistake, contact support to have your account status reviewed.
+palmerozo /
+palmerozo.github.io
+
+0
+0
+
+    0
+
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+
+    Settings
+
+palmerozo.github.io/index.html
+@palmerozo
+palmerozo Update index.html
+Latest commit f57aa8b on Jul 19
+History
+1 contributor
+205 lines (205 sloc) 11.9 KB
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -43,7 +78,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Leading Managed IT Services and IT Support Services. Book Your No Risk Complimentary Network Assessment Today." href="https://networkiteasy.com/">Find Out More</a>
+                        <p class="text-white-75 font-weight-light mb-5">Leading Managed IT Services and IT Support Services. Book Your No Risk Complimentary Network Assessment Today." Find Out More</a>
                     </div>
                 </div>
             </div>
@@ -203,3 +238,19 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
+    © 2021 GitHub, Inc.
+    Terms
+    Privacy
+    Security
+    Status
+    Docs
+
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
+Loading complete
